# rofi-rwifi

./: Cargo.toml  LICENSE  README.md  config.toml.example  install.sh
.github/workflows/: rust.yml
src/: cache.rs  config.rs  daemon.rs  main.rs  nmcli.rs  notify.rs  qr.rs  rofi.rs  types.rs
