[package]
name = "rofi-rwifi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rofi-rwifi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ctrlc = "3.5.2"
dirs = "6.0.0"
libc = "0.2"
qrcode = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
